Fix layout on IE9 and remove link to advanced searh on breadcrumb

--- a/css/layout.css
+++ b/css/layout.css
@@ -531,7 +531,7 @@ DIV.resultServices DIV.searchHistory DIV.altpopup{
     padding: 5px 5px 5px 20px;
 }
 .resultOptions {
-    margin-left: 236px;
+    margin-left: 240px;
 }
 .yourSelectionCheck {
     float: left;
